--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,16 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "http-status-codes": "^2.3.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
