--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --env-file=.env.production index.js",
-    "dev": "nodemon --env-file=.env.development index.js",
+    "start": "nodemon --env-file=.env.production ./src/index.js",
+    "dev": "nodemon --env-file=.env.development ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./"
   },
