Added custom error classes, changed error handling logic, changed logging format and log messages, changed api responses, added validation using express-validator, made username case-insensitive, added graceful shutdown on uncaught exception and unhandled rejection.

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -30,6 +30,11 @@
         ],
         "no-var": "error",
         "prefer-const": "error",
-        "eqeqeq": "error"
+        "eqeqeq": "error",
+        "space-before-function-paren": ["error", {
+            "anonymous": "always",
+            "named": "never",
+            "asyncArrow": "always"
+        }]
     }
 }
