--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "http-status-codes": "^2.3.0",
-    "joi": "^17.11.0",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
